--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         .header h1 {
             font-size: 24px; margin-bottom: 8px;
             background: linear-gradient(90deg, #00d9ff, #00ff88);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
         .header p { color: #888; font-size: 14px; }
         .login-section {
